<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.landing.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_backArrow3"
            android:layout_width="45dp"
            android:layout_height="47dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="@color/button_light"
            app:cornerRadius="180dp"
            android:drawableTop="@drawable/ic_back_arrow"
            android:drawableTint="@color/black"
            />

        <ImageView
            android:id="@+id/logo3"
            android:layout_width="318dp"
            android:layout_height="118dp"
            android:layout_gravity="center"
            android:layout_marginTop="27dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/welcomeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/welcomeBack"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/login_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/loginAccount"
            android:textColor="@color/black_desc"
            android:textSize="16sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/email3"
                android:layout_width="45dp"
                android:layout_height="47dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="43dp"
                android:src="@drawable/ic_email"
                app:tint="@color/black"
                />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="261dp"
                android:layout_height="47dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="43dp"
                android:layout_toEndOf="@+id/email3"
                android:backgroundTint="@color/button_light"
                android:ems="10"
                android:fontFamily="@font/montserrat_medium"
                android:hint="Enter your email"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="12sp"
                app:cornerRadius="12dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pass3"
                android:layout_width="45dp"
                android:layout_height="47dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="13dp"
                app:srcCompat="@drawable/ic_key"
                app:tint="@color/black" />

            <EditText
                android:id="@+id/edt_pass"
                android:layout_width="261dp"
                android:layout_height="47dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="13dp"
                android:layout_toEndOf="@+id/pass3"
                android:backgroundTint="@color/button_light"
                android:ems="10"
                android:fontFamily="@font/montserrat_medium"
                android:hint="Enter your password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="12sp" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_forgotPass"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/transparent"
            android:background="@color/transparent"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/forgotPass"
            android:textAllCaps="false"
            android:textColor="@color/blue_text"
            android:textSize="15sp"
            android:letterSpacing="0"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="238dp"
                android:layout_height="68dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/button_light"
                android:fontFamily="@font/montserrat_medium"
                android:letterSpacing="0"
                android:text="@string/btn_login"
                android:textColor="@color/blue"
                android:textSize="20sp"
                app:cornerRadius="20dp"/>

            <TextView
                android:id="@+id/doesntHaveAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_Login"
                android:layout_marginStart="95dp"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/dontHaveAcc"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btn_SignUp"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_below="@+id/btn_Login"
                android:layout_marginStart="-18dp"
                android:layout_marginTop="-2dp"
                android:layout_toEndOf="@+id/doesntHaveAcc"
                android:background="@color/transparent"
                android:backgroundTint="@color/transparent"
                android:fontFamily="@font/montserrat_regular"
                android:letterSpacing="0"
                android:text="@string/btn_signUp"
                android:textAllCaps="false"
                android:textColor="@color/blue_text"
                android:textSize="13sp" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>